Feat: 전공 목록 API 응답에 svg 경로 추가 (#89)
* Feat: 전공 목록 API 응답에 svg 경로 추가

- svg 파일 추가 & Cache Control 설정

* Refactor: from 메소드 -> builder 패턴으로 변경

* Feat: 다른 상수 목록에도 svg 파일 path 추가

---------

Co-authored-by: JAEGYUN JUNG <twicegoddessana1229@gmail.com>