@@ -3,36 +3,38 @@ package promiseofblood.umpabackend.web.controller;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import promiseofblood.umpabackend.application.service.ConstantService;
 import promiseofblood.umpabackend.domain.vo.College;
 import promiseofblood.umpabackend.domain.vo.Grade;
-import promiseofblood.umpabackend.domain.vo.Instrument;
 import promiseofblood.umpabackend.domain.vo.LessonStyle;
-import promiseofblood.umpabackend.domain.vo.Major;
 import promiseofblood.umpabackend.domain.vo.RegionCategory;
-import promiseofblood.umpabackend.domain.vo.Subject;
 import promiseofblood.umpabackend.domain.vo.WeekDay;
 import promiseofblood.umpabackend.web.schema.response.ConstantResponses;
+import promiseofblood.umpabackend.web.schema.response.ConstantResponses.InstrumentIconResponse;
+import promiseofblood.umpabackend.web.schema.response.ConstantResponses.MajorIconResponse;
+import promiseofblood.umpabackend.web.schema.response.ConstantResponses.SubjectIconResponse;
 
 @RestController
 @RequestMapping("api/v1/constants")
 @Tag(name = "상수 API", description = "서버에서 필요한 상수 값들을 조회하는 API")
+@RequiredArgsConstructor
 public class ConstantsController {
 
+  private final ConstantService constantService;
+
   @GetMapping("/majors")
-  public ResponseEntity<List<ConstantResponses.MajorResponse>> getMajors() {
+  public ResponseEntity<List<ConstantResponses.MajorIconResponse>> getMajors() {
 
-    List<ConstantResponses.MajorResponse> majorResponses =
-        Stream.of(Major.values())
-            .map(ConstantResponses.MajorResponse::from)
-            .collect(Collectors.toList());
+    List<MajorIconResponse> majorIconResponses =
+        constantService.getMajorList().stream().map(MajorIconResponse::from).toList();
 
-    return ResponseEntity.ok(majorResponses);
+    return ResponseEntity.ok(majorIconResponses);
   }
 
   @GetMapping("/weekdays")
@@ -58,14 +60,12 @@ public class ConstantsController {
   }
 
   @GetMapping("/subjects")
-  public ResponseEntity<List<ConstantResponses.SubjectResponse>> getSubjects() {
+  public ResponseEntity<List<ConstantResponses.SubjectIconResponse>> getSubjects() {
 
-    List<ConstantResponses.SubjectResponse> subjectResponses = new ArrayList<>();
-    for (Subject subject : Subject.values()) {
-      subjectResponses.add(ConstantResponses.SubjectResponse.from(subject));
-    }
+    List<SubjectIconResponse> subjectIconResponses =
+        constantService.getSubjectList().stream().map(SubjectIconResponse::from).toList();
 
-    return ResponseEntity.ok(subjectResponses);
+    return ResponseEntity.ok(subjectIconResponses);
   }
 
   @GetMapping("lessonStyles")
@@ -102,13 +102,22 @@ public class ConstantsController {
   }
 
   @GetMapping("/instruments")
-  public ResponseEntity<List<ConstantResponses.InstrumentResponse>> getInstruments() {
+  public ResponseEntity<List<ConstantResponses.InstrumentIconResponse>> getInstruments() {
 
-    List<ConstantResponses.InstrumentResponse> instrumentResponses = new ArrayList<>();
-    for (Instrument instrument : Instrument.values()) {
-      instrumentResponses.add(ConstantResponses.InstrumentResponse.from(instrument));
-    }
+    List<InstrumentIconResponse> instrumentIconResponses =
+        constantService.getInstrumentList().stream().map(InstrumentIconResponse::from).toList();
 
-    return ResponseEntity.ok(instrumentResponses);
+    return ResponseEntity.ok(instrumentIconResponses);
+  }
+
+  @GetMapping("scoreTypes")
+  public ResponseEntity<List<ConstantResponses.ScoreTypeIconResponse>> getScoreTypes() {
+
+    List<ConstantResponses.ScoreTypeIconResponse> scoreTypeIconResponses =
+        constantService.getScoreTypeList().stream()
+            .map(ConstantResponses.ScoreTypeIconResponse::from)
+            .toList();
+
+    return ResponseEntity.ok(scoreTypeIconResponses);
   }
 }
